# korero

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  KORERO_PATCHES_APPLIED.txt  README.md  THIRD_PARTY_NOTICES.md  UPSTREAM_SHA.txt  flake.nix  index.html  latest.json  package.json  tailwind.config.js  upload-installer.json  upload-zip.json  upload_url.txt  upload_url18.txt  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  code-quality.yml  main-build.yml  nix-check.yml  playwright.yml  test.yml
.nix/: bun-lock-hash  bun.nix
.nix/scripts/: canonicalize-node-modules.ts  heal-peer-dep-bins.ts  normalize-bun-binaries.ts  normalize-install.ts
nix/: hm-module.nix  module.nix
scripts/: check-nix-deps.ts
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  narrow.json
src-tauri/nsis/: installer.nsi
src-tauri/resources/models/: gigaam_vocab.txt
src-tauri/src/: actions.rs  audio_feedback.rs  corrections.rs  crash.rs  denoise.rs  lib.rs  llm_client.rs  meeting.rs  meeting_capture.rs  meeting_capture_wasapi.rs  overlay.rs  portable.rs  secret_store.rs  settings.rs  transcription_coordinator.rs  tray.rs  update_check.rs  window_info.rs
src-tauri/src/audio_toolkit/: mod.rs  text.rs
src-tauri/src/audio_toolkit/audio/: mod.rs  recorder.rs  utils.rs
src-tauri/src/commands/: audio.rs  history.rs  history_extra.rs  mod.rs  models.rs  notes.rs  ollama.rs
src-tauri/src/managers/: audio.rs  history.rs  model.rs  transcription.rs  transcription_mock.rs
src-tauri/src/shortcut/: mod.rs  tauri_impl.rs
src/components/: ErrorBoundary.tsx  Sidebar.tsx
src/components/footer/: Footer.tsx  PrivacyPills.tsx
src/components/icons/: CancelIcon.tsx  HandyTextLogo.tsx  MicrophoneIcon.tsx  TranscriptionIcon.tsx
src/components/model-selector/: ModelDropdown.tsx  ModelSelector.tsx  ModelStatusButton.tsx
src/components/onboarding/: AccessibilityOnboarding.tsx  ModelCard.tsx  Onboarding.tsx
src/components/settings/: AccelerationSelector.tsx  GlobalShortcutInput.tsx  HandyKeysShortcutInput.tsx  LazyStreamClose.tsx  ModelUnloadTimeout.tsx  NoiseSuppression.tsx  SoundPicker.tsx  VolumeSlider.tsx
src/components/settings/PostProcessingSettingsApi/: OllamaPullButton.tsx  usePostProcessProviderState.ts
src/components/settings/about/: AboutSettings.tsx
src/components/settings/advanced/: AdvancedSettings.tsx
src/components/settings/debug/: DebugPaths.tsx  DebugSettings.tsx  RecordingBuffer.tsx
src/components/settings/general/: GeneralSettings.tsx  ModelSettingsCard.tsx
src/components/settings/help/: HelpSettings.tsx
src/components/settings/history/: HistorySettings.tsx
src/components/settings/home/: HomeDashboard.tsx
src/components/settings/meetings/: CaptureMeters.tsx  MeetingsSettings.tsx
src/components/settings/models/: ModelsSettings.tsx
src/components/settings/notes/: NotesSettings.tsx
src/components/settings/post-processing/: PostProcessingSettings.tsx
src/components/ui/: Badge.tsx  Corrections.tsx  Dropdown.tsx  Markdown.tsx  MarkdownInner.tsx  SettingsGroup.tsx  Slider.tsx
src/components/update-checker/: UpdateChecker.tsx
src/i18n/: languages.ts
src/i18n/locales/ar/: translation.json
src/i18n/locales/bg/: translation.json
src/i18n/locales/cs/: translation.json
src/i18n/locales/de/: translation.json
src/i18n/locales/en/: translation.json
src/i18n/locales/es/: translation.json
src/i18n/locales/fr/: translation.json
src/i18n/locales/he/: translation.json
src/i18n/locales/it/: translation.json
src/i18n/locales/ja/: translation.json
src/i18n/locales/ko/: translation.json
src/i18n/locales/pl/: translation.json
src/i18n/locales/pt/: translation.json
src/i18n/locales/ru/: translation.json
src/i18n/locales/sv/: translation.json
src/i18n/locales/tr/: translation.json
src/i18n/locales/uk/: translation.json
src/i18n/locales/vi/: translation.json
src/i18n/locales/zh/: translation.json
src/i18n/locales/zh-TW/: translation.json
src/lib/types/: events.ts
src/overlay/: RecordingOverlay.css  RecordingOverlay.tsx
src/stores/: modelStore.ts  settingsStore.ts
