[package]
name = "korero"
version = "1.16.0"
description = "Kōrero — speech-to-text, NZ English"
authors = ["Nic Keating <nkeating@gmail.com>", "cjpais (upstream)"]
edition = "2021"
license = "MIT"
default-run = "korero"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# NOTE (Kōrero fork): library name kept as `handy_app_lib` intentionally — it
# is internal-only (never user-visible) and renaming would cascade into
# src/main.rs and src/audio_toolkit/bin/cli.rs imports for no real gain.
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "handy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [[bin]]
# name = "cli"
# path = "src/audio_toolkit/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies]
once_cell = "1"
tauri = { version = "2.10.2", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  'image-png',
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-process = "2.3.1"
rusqlite_migration = "2.3"
tauri-plugin-fs = "2.4.4"
# Kōrero (v1.11.0): optional RNNoise microphone denoiser. Pure-Rust port of
# xiph/rnnoise (no C/FFI/cmake) so it adds nothing to the Windows build
# toolchain. Licence BSD-3-Clause (permissive — fine for the MIT fork; attribute
# in THIRD_PARTY_NOTICES). Verified API v0.5.2. 48 kHz, 480-sample i16-range frames.
nnnoiseless = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
cpal = "0.16.0"
anyhow = "1.0.95"
rubato = "0.16.2"
hound = "3.5.1"
log = "0.4.25"
env_filter = "0.1.0"
tokio = "1.43.0"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
enigo = "0.6.1"
rodio = { git = "https://github.com/cjpais/rodio.git" }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
rustfft = "6.4.0"
strsim = "0.11.0"
natural = "0.5.0"
regex = "1"
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
tar = "0.4.44"
flate2 = "1.0"
sha2 = "0.10"
transcribe-rs = { version = "0.3.11", features = ["whisper-cpp", "onnx"] }
handy-keys = "0.2.4"
ferrous-opencc = "0.2.3"
clap = { version = "4", features = ["derive"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2.6"
# Kōrero: OS keychain for post-process LLM API keys.
# Windows Credential Manager / macOS Keychain / Linux Secret Service.
# v3.x is the current stable major. Default features include all native backends.
keyring = "3.6"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.2"
# Kōrero (2026-05-17 PM): persist window size/position/maximised between
# launches so Nic doesn't have to resize away from the default every session.
# State file lives in $APPDATA/com.nkeating.korero/.window-state.json.
tauri-plugin-window-state = "2"
# Kōrero fork: tauri-plugin-updater removed. We don't want auto-updates
# pulling upstream Handy releases over our patched build.
# tauri-plugin-updater = "2.10.0"

[target.'cfg(windows)'.dependencies]
# Kōrero (v1.13.6): native WASAPI loopback for the Meetings "Others" stream.
# The cpal input-stream-on-output-device loopback proved unreliable on real
# hardware (stream starts, no data). MIT licence; same author as CamillaDSP.
wasapi = "0.23"
# Kōrero fork: dropped "whisper-vulkan" feature so we don't need the Vulkan SDK
# as a build dep. Whisper falls back to CPU (still fine for Small/Medium).
# Kept "ort-directml" — Parakeet (our default model) still gets GPU acceleration
# via DirectML on Windows.
# Kōrero (2026-05-17 PM, T2.1): aligned version to 0.3.8 to match the base
# [dependencies] entry. The per-platform blocks below add platform-specific
# features only — version must match base or Cargo silently picks the lowest
# satisfying both constraints (was 0.3.8 in practice, but the manifest read
# as inconsistent).
transcribe-rs = { version = "0.3.11", features = ["ort-directml"] }
windows = { version = "0.61.3", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
# Kōrero (2026-05-17 PM, T2.1): version aligned to base.
transcribe-rs = { version = "0.3.11", features = ["whisper-metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
gtk = "0.18"
# Kōrero (2026-05-17 PM, T2.1): version aligned to base.
transcribe-rs = { version = "0.3.11", features = ["whisper-vulkan"] }

[patch.crates-io]
tauri-runtime = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
tauri-runtime-wry = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }
tauri-utils = { git = "https://github.com/cjpais/tauri.git", branch = "handy-2.10.2" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
